--- a/src/main/resources/templates/account/intro.html
+++ b/src/main/resources/templates/account/intro.html
@@ -15,7 +15,7 @@
 
     <div style="height: 113px;"></div>
 
-    <div class="unit-5 overlay" style="background-image: url('/images/hero_1.jpg');">
+    <div class="unit-5 overlay" style="background-image: url('/static/images/hero_1.jpg');">
         <div class="container text-center">
             <h2 class="mb-0">Trở thành thành viên ngay hôm nay</h2>
             <h4 class="mb-0 unit-6">Tận hưởng những giá trị mà TaskUnite mang lại</h4>
@@ -31,7 +31,7 @@
                     <div class="text-center mb-5 section-heading">
                         <h2>Bạn muốn trở thành Master ?</h2>
                     </div>
-                    <img class="center-image" src="/images/client-sign-up-img.png" alt="">
+                    <img class="center-image" src="/static/images/client-sign-up-img.png" alt="">
                     <p class="mb-4 h5 font-italic lineheight1-5 text-center description-text">Đăng ký ngay để nhận sự trợ giúp của cộng đồng hơn 100,000 Tasker chất lượng.</p>
                     <div class="mt-5 form-group text-center">
                         <button class="btn btn-success btn-continue px-4 " data-type="address" type="button">Trở thành Master
@@ -43,7 +43,7 @@
                     <div class="text-center mb-5 section-heading">
                         <h2>Bạn muốn trở thành Tasker ?</h2>
                     </div>
-                    <img class="center-image" src="/images/become-a-tasker-img.png" alt="">
+                    <img class="center-image" src="/static/images/become-a-tasker-img.png" alt="">
                     <p class="mb-4 h5 font-italic lineheight1-5 text-center description-text">Tham gia ngay để kiếm thêm thu nhập từ những công việc đầu tiên.</p>
                     <p></p>
                     <div class="mt-5 form-group text-center">
