--- a/src/main/webapp/app/entities/user-information/user-information-detail.component.html
+++ b/src/main/webapp/app/entities/user-information/user-information-detail.component.html
@@ -5,6 +5,10 @@
             <hr>
             <jhi-alert-error></jhi-alert-error>
             <dl class="row-md jh-entity-details">
+                <dt><span jhiTranslate="taskUniteApp.userInformation.gender">Gender</span></dt>
+                <dd>
+                    <span>{{userInformation.gender}}</span>
+                </dd>
                 <dt><span jhiTranslate="taskUniteApp.userInformation.address">Address</span></dt>
                 <dd>
                     <span>{{userInformation.address}}</span>
