--- a/src/main/webapp/app/entities/user-information/user-information-update.component.html
+++ b/src/main/webapp/app/entities/user-information/user-information-update.component.html
@@ -10,6 +10,11 @@
                         readonly />
                 </div>
                 <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="taskUniteApp.userInformation.gender" for="field_gender">Gender</label>
+                    <input type="number" class="form-control" name="gender" id="field_gender"
+                           formControlName="gender"/>
+                </div>
+                <div class="form-group">
                     <label class="form-control-label" jhiTranslate="taskUniteApp.userInformation.address" for="field_address">Address</label>
                     <input type="text" class="form-control" name="address" id="field_address"
                            formControlName="address"/>
