Create task xong step 2

--- a/src/main/resources/templates/task/create/step1.html
+++ b/src/main/resources/templates/task/create/step1.html
@@ -72,7 +72,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-lg-12 mb-5">
-                    <form action="#" id="form-task">
+                    <form th:action="@{/task/create/step1}" th:object="${taskInfo}" id="form-task" method="post">
                         <div class="row form-group">
                             <div class="col-md-12 mb-3 mb-md-0 task-box bg-white border" data-editing=true
                                  data-state="summary">
@@ -153,35 +153,38 @@
                                     class="text-danger error-msg d-none"></span></div>
                                 <div class="box-input">
                                     <div class="form-group">
-                                        <div class="custom-control custom-checkbox custom-control-inline">
-                                            <input type="checkbox" class="custom-control-input" id="cateId1"
-                                                   th:value="#{task-create.step1.categories-housework}">
-                                            <label class="custom-control-label d-inline" for="cateId1" th:text="#{task-create.step1.categories-housework}"></label>
-                                        </div>
-                                        <div class="custom-control custom-checkbox custom-control-inline">
-                                            <input type="checkbox" class="custom-control-input" id="cateId2"
-                                                   value="Thợ điện">
-                                            <label class="custom-control-label d-inline" for="cateId2">Thợ điện</label>
-                                        </div>
-                                        <div class="custom-control custom-checkbox custom-control-inline">
-                                            <input type="checkbox" class="custom-control-input" id="cateId3"
-                                                   value="Vận chuyển">
-                                            <label class="custom-control-label d-inline" for="cateId3">Vận
-                                                chuyển</label>
-                                        </div>
-                                        <div class="custom-control custom-checkbox custom-control-inline">
-                                            <input type="checkbox" class="custom-control-input" id="cateId4"
-                                                   value="Thợ mộc">
-                                            <label class="custom-control-label d-inline" for="cateId4">Vận
-                                                chuyển</label>
-                                        </div>
-                                        <div class="custom-control custom-checkbox custom-control-inline">
-                                            <input type="checkbox" class="custom-control-input" id="cateId5"
-                                                   value="Sửa chữa nội thất">
-                                            <label class="custom-control-label d-inline" for="cateId5">Sửa chữa nội
-                                                thất
-                                            </label>
-                                        </div>
+                                        <!--<div class="custom-control custom-checkbox custom-control-inline">-->
+                                            <!--<input type="checkbox" class="custom-control-input" id="cateId1"-->
+                                                   <!--th:value="#{task-create.step1.categories-housework}">-->
+                                            <!--<label class="custom-control-label d-inline" for="cateId1" th:text="#{task-create.step1.categories-housework}"></label>-->
+                                        <!--</div>-->
+                                        <th:block th:each="category: ${taskCategories}">
+                                            <div class="custom-control custom-checkbox custom-control-inline">
+                                                <input type="checkbox" name="taskCategories" class="custom-control-input" th:id="'cateId-' + ${category.id}"
+                                                       th:value="${category.id}" th:field="*{taskCategories}">
+                                                <label class="custom-control-label d-inline" th:for="'cateId-' + ${category.id}" th:text="${category.name}"></label>
+                                            </div>
+                                        </th:block>
+
+                                        <!--<div class="custom-control custom-checkbox custom-control-inline">-->
+                                            <!--<input type="checkbox" class="custom-control-input" id="cateId3"-->
+                                                   <!--value="Vận chuyển">-->
+                                            <!--<label class="custom-control-label d-inline" for="cateId3">Vận-->
+                                                <!--chuyển</label>-->
+                                        <!--</div>-->
+                                        <!--<div class="custom-control custom-checkbox custom-control-inline">-->
+                                            <!--<input type="checkbox" class="custom-control-input" id="cateId4"-->
+                                                   <!--value="Thợ mộc">-->
+                                            <!--<label class="custom-control-label d-inline" for="cateId4">Vận-->
+                                                <!--chuyển</label>-->
+                                        <!--</div>-->
+                                        <!--<div class="custom-control custom-checkbox custom-control-inline">-->
+                                            <!--<input type="checkbox" class="custom-control-input" id="cateId5"-->
+                                                   <!--value="Sửa chữa nội thất">-->
+                                            <!--<label class="custom-control-label d-inline" for="cateId5">Sửa chữa nội-->
+                                                <!--thất-->
+                                            <!--</label>-->
+                                        <!--</div>-->
                                     </div>
                                     <div class="mt-5 form-group text-center">
                                         <button class="btn btn-success btn-continue px-4" data-type="category"
@@ -207,7 +210,7 @@
                                     class="text-danger error-msg d-none"></span></div>
                                 <div class="box-input">
                                     <div class="form-group">
-                                        <input type="number" class="form-control w-25" id="estimated-time">
+                                        <input type="number" th:value="${estimateTime}" name="estimateTime" class="form-control w-25" id="estimated-time">
                                     </div>
                                     <div class="mt-5 form-group text-center">
                                         <button class="btn btn-success btn-continue px-4" data-type="estimated-time"
@@ -231,7 +234,7 @@
                                     class="text-danger error-msg d-none"></span></div>
                                 <div class="box-input">
                                     <div class="form-group">
-                                        <textarea class="form-control" style="min-height: 150px"
+                                        <textarea th:field="*{description}" class="form-control" style="min-height: 150px"
                                                   name="description"
                                                   th:placeholder="#{task-create.step1.task-des-placehoder}"></textarea>
                                     </div>
@@ -249,9 +252,9 @@
                         </div>
                         <div class="row form-group">
                             <div class="col-md-12 text-right">
-                                <a href="javascript:void (0)" id="next-step2">
-                                    <button type="button" class="btn btn-success py-2 px-5" disabled="disabled" th:text="#{task-create.next-btn}"></button>
-                                </a>
+                                <!--<a href="javascript:void (0)" id="next-step2">-->
+                                    <button type="submit" id="next-step2" class="btn btn-success py-2 px-5" disabled="disabled" th:text="#{task-create.next-btn}"></button>
+                                <!--</a>-->
                             </div>
                         </div>
                     </form>
