--- a/src/main/resources/templates/task/create/step3.html
+++ b/src/main/resources/templates/task/create/step3.html
@@ -91,95 +91,9 @@
                                 </div>
                                 <div style="border-right: 1px solid #E5E7EC">
                                     <div class="calendar__container">
-                                        <div class="calendar__row"><h4 class="calendar__title"> Hôm nay, <span></span></h4></div>
-                                        <div class="calendar__row">
-                                            <div class="calendar__week">
-                                                <div class="calendar__day--label" th:text="#{task-create.step3.sunday}"></div>
-                                                <div class="calendar__day--label" th:text="#{task-create.step3.monday}"></div>
-                                                <div class="calendar__day--label" th:text="#{task-create.step3.tuesday}"></div>
-                                                <div class="calendar__day--label" th:text="#{task-create.step3.wednesday}"></div>
-                                                <div class="calendar__day--label" th:text="#{task-create.step3.thursday}"></div>
-                                                <div class="calendar__day--label" th:text="#{task-create.step3.friday}"></div>
-                                                <div class="calendar__day--label"th:text="#{task-create.step3.saturday}"></div>
-                                            </div>
-                                        </div>
-                                        <div>
-                                            <div class="calendar__row">
-                                                <div class="calendar__week">
-                                                    <div
-                                                        class="calendar__day calendar__day--hover calendar__day--disabled">
-                                                        17
-                                                    </div>
-                                                    <div
-                                                        class="calendar__day calendar__day--hover calendar__day--disabled">
-                                                        18
-                                                    </div>
-                                                    <div
-                                                        class="calendar__day calendar__day--hover calendar__day--disabled">
-                                                        19
-                                                    </div>
-                                                    <div
-                                                        class="calendar__day calendar__day--hover calendar__day--disabled">
-                                                        20
-                                                    </div>
-                                                    <div
-                                                        class="calendar__day calendar__day--hover calendar__day--today">
-                                                        21
-                                                    </div>
-                                                    <div
-                                                        class="calendar__day calendar__day--hover calendar__day--selected">
-                                                        22
-                                                    </div>
-                                                    <div class="calendar__day calendar__day--hover">23</div>
-                                                </div>
-                                            </div>
-                                            <div class="calendar__row">
-                                                <div class="calendar__week">
-                                                    <div
-                                                        class="calendar__day calendar__day--hover calendar__day--disabled">
-                                                        24
-                                                    </div>
-                                                    <div class="calendar__day calendar__day--hover">25</div>
-                                                    <div class="calendar__day calendar__day--hover">26</div>
-                                                    <div
-                                                        class="calendar__day calendar__day--hover calendar__day--disabled">
-                                                        27
-                                                    </div>
-                                                    <div
-                                                        class="calendar__day calendar__day--hover calendar__day--disabled">
-                                                        28
-                                                    </div>
-                                                    <div
-                                                        class="calendar__day calendar__day--hover calendar__day--disabled">
-                                                        29
-                                                    </div>
-                                                    <div class="calendar__day calendar__day--hover">30</div>
-                                                </div>
-                                            </div>
-                                            <div class="calendar__row">
-                                                <div class="calendar__week">
-                                                    <div class="calendar__day calendar__day--hover">
-                                                        <div class="calendar__day--with-month">
-                                                            <div style="font-size: 12px">T12</div>
-                                                            <div>1</div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="calendar__day calendar__day--hover">2</div>
-                                                    <div class="calendar__day calendar__day--hover">3</div>
-                                                    <div class="calendar__day calendar__day--hover">4</div>
-                                                    <div class="calendar__day calendar__day--hover">5</div>
-                                                    <div
-                                                        class="calendar__day calendar__day--hover calendar__day--disabled">
-                                                        6
-                                                    </div>
-                                                    <div
-                                                        class="calendar__day calendar__day--hover calendar__day--disabled">
-                                                        7
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
+                                        <div id="calendar-value"></div>
                                     </div>
+
                                     <div class="exterior__bottom--lg recommendations__tasker_schedule_modal--select">
                                         <select style="width: 100%;" id="select-time">
                                             <option value="8:30">8:30</option>
