--- a/src/main/resources/templates/task/create/step2.html
+++ b/src/main/resources/templates/task/create/step2.html
@@ -3,6 +3,7 @@
 <head>
     <title>Create Task</title>
     <th:block th:include="fragment/layout :: head"></th:block>
+    <link rel="stylesheet" th:href="@{~/css/responsive/task/create.css}">
 </head>
 <body>
 
@@ -75,18 +76,7 @@
     <div class="site-section bg-dark-light">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 col-md-12 text-right">
-                    <label class="text-uppercase mr-1" th:text="#{task-create.step2.sorted-by}"></label>
-                    <select id="filter-option" class="">
-                        <option value="0" selected th:text="#{task-create.step2.sorted-by-recommended}"></option>
-                        <option value="1" th:text="#{task-create.step2.sorted-by-price-lowest-to-highest}"></option>
-                        <option value="2" th:text="#{task-create.step2.sorted-by-price-highest-to-lowest}"></option>
-                        <option value="3" th:text="#{task-create.step2.sorted-by-recommended}"></option>
-                    </select>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 col-lg-4 p-2">
+                <div class="col-md-12 col-lg-4 p-2 box-filter">
                     <div class="recommendations__trust-safety__box panel panel--spaced ">
                         <img class="recommendations__trust-safety__box__icon"
                              th:src="@{~/images/protected.svg}" alt="shield">
@@ -96,7 +86,8 @@
                     </div>
                     <div class="panel panel--spaced panel--with-overflow">
                         <div class="title-date text-uppercase text-bold">
-                            <span class="icon-calendar mr-2" th:text="#{task-create.step2.task-date}"></span>
+                            <span class="icon-calendar mr-2"></span>
+                            <span th:text="#{task-create.step2.task-date}"></span>
                             <span class="icon-chevron-up iconSlideUp"></span>
                         </div>
                         <div class="box-option mt-3">
@@ -120,7 +111,7 @@
                     </div>
                     <div class="panel panel--spaced panel--with-overflow">
                         <div class="title-date text-uppercase text-bold">
-                            <span class="icon-clock-o mr-2" th:text="#{task-create.step2.task-time}"> </span>
+                            <span class="icon-clock-o mr-2"> </span> <span th:text="#{task-create.step2.task-time}"></span>
                             <span class="icon-chevron-up iconSlideUp"></span>
                         </div>
                         <div class="mt-3">
@@ -143,17 +134,17 @@
                                        th:text="#{task-create.step2.task-time-evening}"></label>
                             </div>
                             <div class="row my-2 p-3">
-                                <div class="col-lg-3 p-0">
+                                <div class="col-lg-3 p-0 col-xs-1">
                                     <div class="h-20 line-mid">
                                         <div class="line"></div>
                                     </div>
                                 </div>
-                                <div class="col-lg-6 text-center p-0">
+                                <div class="col-lg-6 text-center p-0 col-xs-10">
                                     <div class="h-20" style="font-size: 13px; color: #3f3f3f"
                                          th:text="#{task-create.step2.task-time-choose-a-specific-time}">s
                                     </div>
                                 </div>
-                                <div class="col-lg-3 p-0">
+                                <div class="col-lg-3 p-0 col-xs-1">
                                     <div class="h-20 line-mid">
                                         <div class="line"></div>
                                     </div>
@@ -196,6 +187,17 @@
                     </div>
                 </div>
                 <div class="col-md-12 col-lg-8 p-2">
+                    <div class="row">
+                        <div class="col-lg-12 col-md-12 text-right">
+                            <label class="text-uppercase mr-1" th:text="#{task-create.step2.sorted-by}"></label>
+                            <select class="filter-option">
+                                <option value="0" selected th:text="#{task-create.step2.sorted-by-recommended}"></option>
+                                <option value="1" th:text="#{task-create.step2.sorted-by-price-lowest-to-highest}"></option>
+                                <option value="2" th:text="#{task-create.step2.sorted-by-price-highest-to-lowest}"></option>
+                                <option value="3" th:text="#{task-create.step2.sorted-by-recommended}"></option>
+                            </select>
+                        </div>
+                    </div>
                     <div class="recommendations__result panel panel--spaced ">
                         <div class="recommendations__result-figure">
                             <div>
