--- a/src/main/resources/templates/task/create/step3.html
+++ b/src/main/resources/templates/task/create/step3.html
@@ -10,7 +10,7 @@
     <div class="mt-4 mb-3">
         <div class="container">
             <div class="row border-bottom pb-3">
-                <div class="col-md-1 box-logo-step">
+                <div class="col-md-1 box-logo-step col-xs-12">
                     <a th:href="@{/}">
                         <img alt="TaskUnite" class="logo-step" th:src="@{~/images/favicon.png}">
                     </a>
